--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -7,3 +7,19 @@ html body{
   height:100%;
   background-color: #efeff4;
 }
+ul{ list-style:none}
+@media screen and (min-width: 320px) {
+  html, body {
+    font-size: 15px;
+  }
+}
+@media screen and (min-width: 375px) {
+  html, body {
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 414px) {
+  html, body {
+    font-size: 17px;
+  }
+}
