--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -2,11 +2,12 @@
   margin: 0;
   padding: 0;
 }
-html body{
+html, body{
   width:100%;
   height:100%;
   background-color: #efeff4;
 }
+
 ul{ list-style:none}
 @media screen and (min-width: 320px) {
   html, body {
@@ -21,5 +22,50 @@ ul{ list-style:none}
 @media screen and (min-width: 414px) {
   html, body {
     font-size: 17px;
+  }
+}
+
+/* 以下为覆盖vux组件的样式 */
+.weui-cells{
+  font-size: 1rem !important;
+}
+.weui-label{
+  width: 5rem !important;
+}
+.weui-btn{
+  margin-top: 1.5rem !important;
+  font-size: 1rem !important;
+  width: 95% !important;
+  overflow: hidden; 
+
+}
+.weui-btn_mini{
+  white-space: nowrap !important;
+  font-size: 0.8rem !important;
+  width: 20% !important;
+  padding: 0 !important;
+  margin-top: 0 !important;
+}
+
+
+// 第三级导航样式
+.nav-3{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 2.4rem;
+  color: #a9a9a9;
+  margin-bottom: 0.9rem;
+  font-size: 0.95rem;
+  li{
+    flex-grow: 1;
+    line-height: 2.4rem;
+    text-align: center;
+    background-color: #fff;
+  }
+  .router-link-active{
+    color: #eb6100;
+    border-bottom: 3px solid #eb6100 !important;
   }
 }
