弃用部分vux表单组件，改为自己封装，解决无法对表单进行验证的问题

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -46,6 +46,9 @@ ul{ list-style:none}
   padding: 0 !important;
   margin-top: 0 !important;
 }
+.weui-textarea{
+  padding-left: 2rem !important;
+}
 
 
 // 第三级导航样式
